Merge with https://github.com/pango853/hinemos/tree/6.1g/manager